# tools

./: .flake8  .gitignore  README.md  install.sh  publish.sh  pyproject.toml  temp.md  tree.sh
scripts/: README.md  publish_tool.py  publish_tools.py  tree_tool.py
src/_share/: tool_spec.py
src/ai_tm/: M1.md  PRD.md  README.md  TODO.md  TODO3.md  tool.py
src/ai_tm/cli/: server.py
src/ai_tm/cli/web/: app.js  index.html  styles.css
src/ai_tm/server/: app.py  models.py  routes.py  webui.py  workspace.py
src/ai_tm/server/format/: strings_parser.py
src/box/: README.md  __init__.py  box.py  cli.py  tool.py
src/box/commands/: clean.py  doctor.py  sync.py  update.py
src/box_tools/_share/openai_translate/: __init__.py  chat.py  client.py  json_translate.py  models.py  translate.py  translate_file.py  translate_list.py  translate_pool.py
src/box_tools/ai/: __init__.py
src/box_tools/ai/chat/: README.md  __init__.py  tool.py
src/box_tools/ai/file/: tool.py
src/box_tools/ai/files/: __init__.py  tool.py
src/box_tools/ai/tm/: PRD.md  TODO2.md
src/box_tools/ai/translate/: README.md  tool.py
src/box_tools/flutter/: pub_publish.md  pub_publish.py  pub_upgrade.md  pub_upgrade.py  pub_version.md  pub_version.py  riverpod_gen.md  riverpod_gen.py
src/box_tools/flutter/pub_publish/: READEME.md  tool.py
src/box_tools/flutter/pubspec/: README.md  (+7 more)
src/box_tools/translate/: ai.translate.md  ai_translate.py  gpt.md  gpt.py  slang_i18n.md  slang_i18n.py  slang_i18n.yaml  strings_i18n.md  strings_i18n.py  strings_i18n.yaml  translate.py
test/: conftest.py  test_box_pub_upgrade.py  test_box_pub_version.py
tests/: conftest.py  pubspec.yaml  test_ai_chat_tool.py  test_box_ai_chat.py  test_box_ai_file.py  test_box_ai_files.py  test_box_ai_tm.py  test_box_ai_translate.py  test_box_ios.py  test_box_json_i18n.py  test_box_pub_publish.py  test_box_pub_upgrade.py  test_box_pub_version.py  test_box_pubspec.py  test_box_riverpod_gen.py  test_box_slang_i18n.py  test_box_strings_i18n.py  test_openai_translate_translate.py
(+46 files in other folders)
