[project]
name = "box"
version = "0.1.51"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
box = "box.tool:main"
box_pub_upgrade = "box_tools.flutter.pub_upgrade.tool:main"
box_pub_version = "box_tools.flutter.pub_version.tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/box", "src/box_tools"]

