[project]
name = "box"
version = "0.1.59"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
box = "box.tool:main"
box_ai_chat = "box_tools.ai.chat.tool:main"
box_pub_publish = "box_tools.flutter.pub_publish.tool:main"
box_pub_upgrade = "box_tools.flutter.pub_upgrade.tool:main"
box_pub_version = "box_tools.flutter.pub_version.tool:main"
box_riverpod_gen = "box_tools.flutter.riverpod_gen.tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/box", "src/box_tools"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

