[project]
name = "box"
version = "0.1.101"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "openai>=1.0.0", "rich", "pyperclip"]

[project.scripts]
box = "box.tool:main"
box_ai_chat = "box_tools.ai.chat.tool:main"
box_ai_translate = "box_tools.ai.translate.tool:main"
box_pubspec = "box_tools.flutter.pubspec.tool:main"
box_riverpod_gen = "box_tools.flutter.riverpod_gen.tool:main"
box_slang_i18n = "box_tools.flutter.slang_i18n.tool:main"
box_strings_i18n = "box_tools.iOS.strings_i18n.tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/box", "src/_share", "src/ai_tm", "src/box_tools"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

